bochs (2.4.1-2) UNRELEASED; urgency=low

  * Remove unused “libreadline5-dev | libreadline-dev” from Build-Depends.
  * Now using Standards-Version 3.8.3 (no changes needed).
  * Use .so extensions instead of .la in the plugin loader so that we can
    stop shipping .la files.
    - debian/patches/12_use_so_plugins.patch: New file.

 -- Guillem Jover <guillem@debian.org>  Sun, 13 Sep 2009 19:22:43 +0200

bochs (2.4.1-1) unstable; urgency=low

  * New upstream release.
    - Refresh patches.
    - debian/patches/0013_fix-non-acpi-timer-interrupt-routing.patch: Remove.
    - debian/patches/11_docbook_section_name.patch: Fix another underscored
      link.
  * Add support for building the bochsbios architecture independent package
    also on any-amd64 systems, and add gcc-multilib for such systems to
    Build-Depends-Indep.
  * Now using Standards-Version 3.8.2 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Tue, 07 Jul 2009 08:19:37 +0200

bochs (2.3.7+20090416-1) unstable; urgency=low

  * New upstream snapshot.
    - debian/patches/00_base.patch: Refresh.
    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_qemu_bios.patch: Likewise.
    - debian/patches/04_man_table.patch: Likewise.
    - debian/patches/05_bios_delay_loop.patch: Likewise.
    - debian/patches/10_enable_iasl.patch: Likewise.
    - debian/patches/11_docbook_section_name.patch: New file.
    - debian/patches/11_ftbfs_3dnow.patch: Remove, fixed upstream.
  * Do no use obsolete --enable-icache configure option.
  * Fix a bashism in /etc/bochs-init/init.sh by explicitely specifing the
    variable REPLY for read. (Closes: #489543)
  * Switch to debhelper compatibility level 7.
  * Use dh_prep instead of “dh_clean -k”.
  * Add QEMU patches for bochsbios. (Closes: #523305)
    - debian/patches/0006_qemu-bios-use-preprocessor-for-pci-link-routing.patch
    - debian/patches/0007_bios-add-26-pci-slots,-bringing-the-total-to-32.patch